[package]
edition = "2018"
name = "log"
version = "0.1.0"

[lib]
name = "log"
path = "src/lib.rs"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
colored = "2.0.0"
prost = "0.7.0"
prost-types = "0.7.0"
serde = {version = "1.0", features = ["derive"]}
toml-highlighter = {path = "../toml-highlighter"}
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
