[package]
edition = "2018"
name = "logger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = "0.4.19"
colored = "2.0.0"
flate2 = "1.0.20"
prost = "0.7.0"
rust-s3 = "0.26.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.8.0", features = ["full"]}
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
