[package]
edition = "2018"
name = "logger"
version = "0.1.0"

[dependencies]
async-trait = "0.1.50"
bincode = "1.3"
chrono = {version = "0.4.19", features = ["serde"]}
colored = "2.0.0"
flate2 = "1.0.20"
prost = "0.7.0"
prost-types = "0.7.0"
rust-s3 = "0.26.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.8.0", features = ["full"]}
toml = "0.5"
toml-highlighter = {path = "../toml-highlighter"}
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
