[package]
edition = "2018"
name = "log-monitor"
version = "0.1.0"

[[bin]]
name = "log-monitor"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.33"
log = { path = "../log" }
serde = "1.0"
tokio = { version = "1.8", features = ["full"] }
toml = "0.5"
toml-highlighter = { path = "../toml-highlighter" }
tonic = "0.6.1"
