[package]
edition = "2018"
name = "log-server"
version = "0.1.0"

[[bin]]
name = "log-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.50"
bincode = "1.3"
chrono = "0.4.19"
flate2 = "1.0.20"
log = {path = "../log"}
rust-s3 = "0.26.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.8.0", features = ["full"]}
toml = "0.5"
toml-highlighter = {path = "../toml-highlighter"}
tonic = "0.4"
