[package]
edition = "2018"
name = "log-server"
version = "0.1.0"

[[bin]]
name = "log-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4"
flate2 = "1.0"
futures = "0.3"
log = {path = "../log"}
rusoto_core = "0.47"
rusoto_s3 = "0.47"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.8", features = ["full"]}
tokio-stream = "0.1"
toml = "0.5"
toml-highlighter = {path = "../toml-highlighter"}
tonic = "0.4"
